# Macro

./: .gitignore  CNAME  README.md  pyproject.toml  relatorio.html  relatorio.qmd  requerements.txt
.github/workflows/: automacao.yml
Fundamentos_Analise_Dados/: analise_IBGE.ipynb  analise_IBGE.py  ibge.ipynb  regressao.py  test.ipynb
Pragramacao_Python_2/incio/: estrutura_dados.ipynb  renomear_coluna.ipynb
Pragramacao_Python_2/limpeza_dados/: criar_columns.ipynb  cruzamento_dados_01.ipynb  deflacionar.ipynb  filtros_linhas.ipynb  operacoes_por_grupo_2.ipynb
Pragramacao_Python_2/relatorio/: relatorio.html  relatorio.qmd
Programacao_Python_2/coleta_dados/: bcb.ipynb  file_excel.ipynb  file_sql.ipynb
Programacao_Python_2/coleta_dados/file/: file_json.sqlite
Programacao_Python_2/dados/: dados.json
Programacao_Python_2/limpeza_dados/: lidando_datas.ipynb
Programacao_Python_2/relatorio/: relatorio.html  relatorio.qmd
Programacao_Python_2/visualizacao/: graficos.ipynb
Programacao_python/: criar_alterar_coluna.ipynb  selecionar_colunas.ipynb
coleta_dados/: file._csv.ipynb  file_API.ipynb  file_json_bc.json  ipea_data.ipynb  test.ipynb  web_scrapping.ipynb
dados/: dados.csv
dashboard/: app.py  etl.py  requirements.txt  test.ipynb
dashboard/rsconnect-python/: dashboard.json
limpeza_dados/: dados_faltantes.ipynb  formato_long_vs_wide.ipynb  operacoes_por_grupo.ipynb  renomear_columns.ipynb  sazonalidade.ipynb  select_colums.ipynb  tratando_textos.ipynb
relatorio/: relatorio.html  relatorio.qmd
visualizacao/: etl.py
(+5 files in other folders)
