[tool.poetry]
name = "analise macro"
version = "0.1.0"
description = "n/a"
authors = ["EconomistsCnpi <gileardejf83@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotnine = "^0.14.4"
python-bcb = "^0.3.0"
shiny = "^1.2.1"
pyyaml = "^6.0.2"
quarto = "^1.6.37"
jupyter = "^1.1.1"
rsconnect-python = "^1.24.0"
dbnomics = "^1.2.5"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
