[tool.poetry]
name = "analise macro"
version = "0.1.0"
description = "N/A"
authors = ["EconomistsCnpi <gileardejf83@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
shiny = "^1.2.1"
plotnine = "^0.14.4"
dbnomics = "^1.2.5"
jupyter = "^1.1.1"
python-bcb = "^0.3.0"
rsconnect-python = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
